--- a/memories.css
+++ b/memories.css
@@ -22,22 +22,22 @@ p {
 }
 
 .memory-game {
-  width: 640px;
+  width: 640px;               
   margin: auto;
-  display: flex;
-  flex-wrap: wrap;
-  perspective: 1000px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr); 
+  grid-template-rows: repeat(3, 1fr);   
+  grid-gap: 10px;
 }
 
 .memory-card {
-  width: calc(25% - 10px);
-  height: 150px;
-  margin: 5px;
+  width: 100%;                  
+  height: 150px;                
   position: relative;
-  transform: scale(1);
   transform-style: preserve-3d;
   transition: transform 0.5s;
   cursor: pointer;
+  border-radius: 10px;
 }
 
 .memory-card.flip {
@@ -47,11 +47,17 @@ p {
 .memory-card img {
   width: 100%;
   height: 100%;
+  border-radius: 10px;
   position: absolute;
   backface-visibility: hidden;
-  border-radius: 5px;
 }
 
-.front-face {
+.memory-card .front-face {
   transform: rotateY(180deg);
+}
+
+.disappear {
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.5s ease;
 }
