--- a/memories.css
+++ b/memories.css
@@ -56,8 +56,13 @@ p {
   transform: rotateY(180deg);
 }
 
-.disappear {
+.fade-out {
   opacity: 0;
-  pointer-events: none;
-  transition: opacity 0.5s ease;
+  transition: opacity 0.5s ease; 
+}
+
+
+h1 {
+    display: flex;
+    justify-content: center;
 }
