--- a/findtheace.css
+++ b/findtheace.css
@@ -23,9 +23,11 @@ p {
 
 .main {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: calc(100vh - 100px);
+    flex-direction: column;  
+    align-items: center;   
+    justify-content: center;  
+    padding-top: 20px;       
+}
 
 
 .game-container {
@@ -81,4 +83,46 @@ p {
 
 .memory-card[data-card="joker"] .front {
   background-image: url('Stone_Joker.webp');
+}
+
+#continueBtn {
+  display: none; 
+  border: 0;
+  line-height: 2.5;
+  padding: 0 20px;
+  font-size: 1rem;
+  text-align: center;
+  color: #fff;
+  text-shadow: 1px 1px 1px #000;
+  border-radius: 10px;
+  background-color: rgb(220 0 0 / 100%);
+  background-image: linear-gradient(
+    to top left,
+    rgb(0 0 0 / 20%),
+    rgb(0 0 0 / 20%) 30%,
+    rgb(0 0 0 / 0%)
+  );
+  box-shadow:
+    inset 2px 2px 3px rgb(255 255 255 / 60%),
+    inset -2px -2px 3px rgb(0 0 0 / 60%);
+  cursor: pointer;
+  text-decoration: none;
+  margin-top: 20px;
+}
+
+#continueBtn:hover {
+  background-color: rgb(255 0 0 / 100%);
+}
+
+#continueBtn:active {
+  box-shadow:
+    inset -2px -2px 3px rgb(255 255 255 / 60%),
+    inset 2px 2px 3px rgb(0 0 0 / 60%);
+}
+
+
+.button-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
 }
